manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: persistent-volume-claim # /Users/mikhail.zvagelsky/kubernetes/devopswithkubernetes/exersize_1-11/manifests/persistent-volume-claim.yml
      containers:
        - name: todo-app
          image: mikhailzvagelsky/devopswithkubernetes_todo
          volumeMounts:
            - name: shared-volume
              mountPath: /home
