manifests/java-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: todo-app-back-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-back
  template:
    metadata:
      labels:
        app: todo-app-back
    spec:
      containers:
        - name: todo-app-back
          image: mikhailzvagelsky/devopswithkubernetes_todo:2.08
          volumeMounts:
            - name: shared-volume  # used to store daily image in it
              mountPath: /home
            - name: secret
              mountPath: "/secrets"
          ports:
            - containerPort: 8091
              name: app-port
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: persistent-volume-claim
        - name: secret
          secret:
            secretName: todo-postgres
            defaultMode: 0400
---
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: todo-back-service
spec:
  type: ClusterIP
  selector:
    app: todo-app-back
  ports:
    - name: back-svc-port
      port: 8091          # The service is listening on this port.
      protocol: TCP
      targetPort: app-port
