manifests/node-port-service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: NodePort
  selector:
    app: todo-app # This is the app as declared in the deployment.
  ports:
    - name: http
      nodePort: 30080 # This is the cluster's node (agent) port that is available outside. Value for nodePort can be between 30000-32767
      protocol: TCP
      port: 1234 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 8091 # The app is listening on this port.
